Implement feedback to add multiple items in one order - Create items checkout functionality [Finishes #160948567]

--- a/UI/admin/all-orders.html
+++ b/UI/admin/all-orders.html
@@ -49,6 +49,32 @@
     <!-- Navigation bar Ends -->
   </header>
 
+
+    <!-- Modal Starts -->
+    <div id="modal" class="modal">
+        <div class="modal-content">
+          <div class="container">
+            <h1 class="">Order items</h1>
+            <div class="">
+              <img src="../assets/images/pastery-1.jpg" height="150" width="150" alt="food item" />
+              <div class="item-details">
+                <p>#1 12-08-2018 12:09:00</p>
+                <p>Chocolate and burger</p>
+                <b>Price: </b><span class="price-figure">&#8358;1500</span>
+                <p><b>Quantity:</b> 5</p>
+              </div>
+            </div>
+            <div class="">
+              <form id="mark-complete">
+                <button type="button" id="close-modal" class="btn red-bg-colour white-text modal-close">Close</button>
+              </form>
+              <br />
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Modal Ends -->
+
   <!-- Main content Starts -->
   <main>
     <section class="box-section">
@@ -63,22 +89,18 @@
           <!--Table for orders starts here-->
           <table>
             <tr>
-              <th> ID</th>
-              <th>Order No</th>
+              <th>Order ID</th>
               <th>Customer's name</th>
-              <th>Meal</th>
-              <th>Amount Paid</th>
-              <th>Quantity (Packs)</th>
+              <th>Total Amount Paid</th>
+              <th>items</th>
               <th>Status</th>
               <th>Manage</th>
             </tr>
             <tr>
               <td>1</td>
-              <td>1101</td>
               <td class="text-wrap">Juwon Lebagerian</td>
-              <td class="text-wrap">Traditional French dessert</td>
               <td>&#8358;6000</td>
-              <td>4</td>
+              <td><a onclick="modalPopup()">View items</a></td>
               <td class="red-text text-wrap">Pending</td>
               <td>
                 <a href="view-order.html">View</a>
@@ -86,11 +108,9 @@
             </tr>
             <tr>
               <td>2</td>
-              <td>1102</td>
               <td class="text-wrap">Ade Dayo</td>
-              <td class="text-wrap">Traditional French dessert</td>
               <td>&#8358;6000</td>
-              <td>4</td>
+              <td><a onclick="modalPopup()">View items</a></td>
               <td class="green-text text-wrap">Completed</td>
               <td>
                 <a href="view-order.html">View</a>
@@ -98,11 +118,9 @@
             </tr>
             <tr>
               <td>3</td>
-              <td>1103</td>
-              <td class="text-wrap">Stephen Styll</td>
-              <td class="text-wrap">Traditional French dessert</td>
+              <td class="text-wrap">Stephen </td>
               <td>&#8358;6000</td>
-              <td>4</td>
+              <td><a onclick="modalPopup()">View items</a></td>
               <td class="red-text text-wrap">Pending</td>
               <td>
                 <a href="view-order.html">View</a>
@@ -110,11 +128,9 @@
             </tr>
             <tr>
               <td>4</td>
-              <td>1104</td>
               <td class="text-wrap">Andela Developer</td>
-              <td class="text-wrap">Traditional French dessert</td>
               <td>&#8358;9000</td>
-              <td>6</td>
+              <td><a onclick="modalPopup()">View items</a></td>
               <td class="green-text text-wrap">Completed</td>
               <td>
                 <a href="view-order.html">View</a>
