--- a/UI/admin/pending-orders.html
+++ b/UI/admin/pending-orders.html
@@ -22,7 +22,6 @@
           <img src="../assets/images/delete.png" alt="Decline" />
         </div>
         <div class="">
-          <h1>Are you sure?</h1>
           <form id="admin-decline-pending">
             <input type="submit" class="btn red-bg-colour white-text" value="Yes" />
             <button type="button" id="close-modal" class="btn btn-secondary modal-close">No</button>
@@ -85,12 +84,10 @@
               </div>
 
               <div class="item-details">
-                <p>#1120 12-08-2018 12:09:00</p>
-                <h3>Shawarma and Sauce</h3>
-                <p>Price: <span class="price-figure">&#8358;1500</span></p>
-                <p>Quantity: 4</p>
+                <p>#1 12-08-2018 12:09:00</p>
+                <h3>Order by: Bruce Banner</h3>
+                <p>Items: 4 <a href="#">View Items</a></p>
                 <p>Amount Paid: <span class="price-figure">&#8358;6000</span></p>
-                <h5>Order by: Bruce Banner</h5>
               </div>
               <button class="green-bg white-text">
                 <a href="accept-order-successful.html" class="white-text">Accept</a>
@@ -107,12 +104,10 @@
                 <img class="img-fluid" src="../assets/images/item-1.jpg" alt="pastery" />
               </div>
               <div class="item-details">
-                <p>#1120 12-08-2018 12:09:00</p>
-                <h3>Ham Burger</h3>
-                <p>Price: <span class="price-figure">&#8358;1500</span></p>
-                <p>Quantity: 4</p>
+                <p>#2 12-08-2018 12:09:00</p>
+                <h3>Order by: Chris Evans</h3>
+                <p>Items: 4 <a href="#">View Items</a></p>
                 <p>Amount Paid: <span class="price-figure">&#8358;6000</span></p>
-                <h5>Order by: Chris Evans</h5>
               </div>
               <button class="green-bg white-text">
                 <a href="accept-order-successful.html" class="white-text">Accept</a>
@@ -126,15 +121,13 @@
           <div class="item">
             <div class="item-container">
               <div class="img-container">
-                <img class="img-fluid" src="../assets/images/pastery-3.jpg" alt="pastery"/>
+                <img class="img-fluid" src="../assets/images/pastery-3.jpg" alt="pastery" />
               </div>
               <div class="item-details">
-                <p>#1120 12-08-2018 12:09:00</p>
-                <h3>Decadent Sugary Fruit Puff</h3>
-                <p>Price: <span class="price-figure">&#8358;1500</span></p>
-                <p>Quantity: 4</p>
+                <p>#3 12-08-2018 12:09:00</p>
+                <h3>Order by: Robert Downey</h3>
+                <p>Items: 4 <a href="#">View Items</a></p>
                 <p>Amount Paid: <span class="price-figure">&#8358;6000</span></p>
-                <h5>Order by: Robert Downey</h5>
               </div>
               <button class="green-bg white-text">
                 <a href="accept-order-successful.html" class="white-text">Accept</a>
@@ -151,12 +144,11 @@
                 <img class="img-fluid" src="../assets/images/pastery-4.jpg" alt="pastery" />
               </div>
               <div class="item-details">
-                <p>#1120 12-08-2018 12:09:00</p>
-                <h3>Freshly Baked Sausages</h3>
-                <p>Price: <span class="price-figure">&#8358;1500</span></p>
-                <p>Quantity: 4</p>
+                <p>#4 12-08-2018 12:09:00</p>
+                <h3>Order by: Dr Strange</h3>
+                <p>Items: 4 <a href="#">View Items</a></p> 
                 <p>Amount Paid: <span class="price-figure">&#8358;6000</span></p>
-                <h5>Order by: Dr Strange</h5>
+                
               </div>
               <button class="green-bg white-text">
                 <a href="accept-order-successful.html" class="white-text">Accept</a>
