--- a/UI/admin/processed-orders.html
+++ b/UI/admin/processed-orders.html
@@ -86,22 +86,18 @@
           <!--Table for orders starts here-->
           <table>
             <tr>
-              <th> ID</th>
-              <th>Order No</th>
+              <th>Order ID</th>
               <th>Customer's name</th>
-              <th>Meal</th>
-              <th>Amount Paid</th>
-              <th>Quantity (Packs)</th>
+              <th>Total Amount Paid</th>
+              <th>Items</th>
               <th>Status</th>
               <th>Manage</th>
             </tr>
             <tr>
               <td>1</td>
-              <td>1101</td>
               <td class="text-wrap">Bruce Banner</td>
-              <td class="text-wrap">Traditional French dessert</td>
               <td>&#8358;6000</td>
-              <td>4</td>
+              <td><a href="#">View items</a></td>
               <td class="text-wrap">in progress...</td>
               <td>
                 <a onclick="modalPopup()">Mark as Complete</a>
@@ -109,11 +105,9 @@
             </tr>
             <tr>
               <td>2</td>
-              <td>1102</td>
               <td class="text-wrap">Robert Downey</td>
-              <td class="text-wrap">Traditional French dessert</td>
               <td>&#8358;6000</td>
-              <td>4</td>
+              <td><a href="#">View items</a></td>
               <td class="text-wrap">in progress...</td>
               <td>
                 <a onclick="modalPopup()">Mark as Complete</a>
