--- a/UI/all-food-items.html
+++ b/UI/all-food-items.html
@@ -16,7 +16,21 @@
     <nav class="navbar" id="myNav">
       <a href="index.html" class="nav-brand">Fast-Food-Fast</a>
       <a href="all-food-items.html">View Menu</a>
-      <a href="login.html">Sign in</a>
+      <a href="login.html" class="profile">Sign in</a>
+      <div class="dropdown profile">
+        <button class="dropbtn">Cart items (0)
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <div class="cart-body">
+            Your cart is empty
+            <br>
+            <button class="blue-bg-colour white-text cart-btn">
+              <a href="login.html" class="white-text">Proceed to checkout</a>
+            </button>
+          </div>
+        </div>
+      </div>
       <a id="nav-icon" class="icon">&#9776;</a>
     </nav>
     <!-- Navigation bar Ends -->
@@ -35,14 +49,14 @@
           <div class="item">
             <div class="item-container">
               <div class="img-container">
-                <img class="img-fluid" src="./assets/images/pastery-1.jpg"/>
+                <img class="img-fluid" src="./assets/images/pastery-1.jpg" />
               </div>
               <div class="item-details">
                 <h3>Traditional French dessert</h3>
                 <p>Price: <span class="price-figure">&#8358;1500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
-                <a href="login.html" class="white-text">Order now</a>
+                <a href="login.html" class="white-text">Add to cart</a>
               </button>
             </div>
           </div>
@@ -50,14 +64,14 @@
           <div class="item">
             <div class="item-container">
               <div class="img-container">
-                <img class="img-fluid" src="./assets/images/pastery-2.jpg"/>
+                <img class="img-fluid" src="./assets/images/pastery-2.jpg" />
               </div>
               <div class="item-details">
                 <h3>Sweet italian pastery</h3>
                 <p>Price: <span class="price-figure">&#8358;1500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
-                <a href="login.html" class="white-text">Order now</a>
+                <a href="login.html" class="white-text">Add to cart</a>
               </button>
 
             </div>
@@ -66,14 +80,14 @@
           <div class="item">
             <div class="item-container">
               <div class="img-container">
-                <img class="img-fluid" src="./assets/images/pastery-3.jpg"/>
+                <img class="img-fluid" src="./assets/images/pastery-3.jpg" />
               </div>
               <div class="item-details">
                 <h3>Decadent Sugary Fruit Puff</h3>
                 <p>Price: <span class="price-figure">&#8358;1500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
-                <a href="login.html" class="white-text">Order now</a>
+                <a href="login.html" class="white-text">Add to cart</a>
               </button>
             </div>
           </div>
@@ -81,14 +95,14 @@
           <div class="item">
             <div class="item-container">
               <div class="img-container">
-                <img class="img-fluid" src="./assets/images/pastery-4.jpg"/>
+                <img class="img-fluid" src="./assets/images/pastery-4.jpg" />
               </div>
               <div class="item-details">
                 <h3>Freshly Baked Sausages</h3>
                 <p>Price: <span class="price-figure">&#8358;1500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
-                <a href="login.html" class="white-text">Order now</a>
+                <a href="login.html" class="white-text">Add to cart</a>
               </button>
 
             </div>
@@ -102,14 +116,14 @@
           <div class="item">
             <div class="item-container">
               <div class="img-container">
-                <img class="img-fluid" src="./assets/images/drink-1.jpg"/>
+                <img class="img-fluid" src="./assets/images/drink-1.jpg" />
               </div>
               <div class="item-details">
                 <h3>Coffee</h3>
                 <p>Price: <span class="price-figure">&#8358;1500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
-                <a href="login.html" class="white-text">Order now</a>
+                <a href="login.html" class="white-text">Add to cart</a>
               </button>
             </div>
           </div>
@@ -117,14 +131,14 @@
           <div class="item">
             <div class="item-container">
               <div class="img-container">
-                <img class="img-fluid" src="./assets/images/drink-2.jpg"/>
+                <img class="img-fluid" src="./assets/images/drink-2.jpg" />
               </div>
               <div class="item-details">
                 <h3>Latte</h3>
                 <p>Price: <span class="price-figure">&#8358;1500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
-                <a href="login.html" class="white-text">Order now</a>
+                <a href="login.html" class="white-text">Add to cart</a>
               </button>
             </div>
           </div>
@@ -132,14 +146,14 @@
           <div class="item">
             <div class="item-container">
               <div class="img-container">
-                <img class="img-fluid" src="./assets/images/drink-3.jpg"/>
+                <img class="img-fluid" src="./assets/images/drink-3.jpg" />
               </div>
               <div class="item-details">
                 <h3>Clean Clear Water</h3>
                 <p>Price: <span class="price-figure">&#8358;1500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
-                <a href="login.html" class="white-text">Order now</a>
+                <a href="login.html" class="white-text">Add to cart</a>
               </button>
             </div>
           </div>
@@ -147,18 +161,17 @@
           <div class="item">
             <div class="item-container">
               <div class="img-container">
-                <img class="img-fluid" src="./assets/images/drink-4.jpg"/>
+                <img class="img-fluid" src="./assets/images/drink-4.jpg" />
               </div>
               <div class="item-details">
                 <h3>Cuba Libre cocktail</h3>
                 <p>Price: <span class="price-figure">&#8358;1500</span></p>
               </div>
               <button class="blue-bg-colour">
-                <a href="login.html" class="white-text">Order now</a>
+                <a href="login.html" class="white-text">Add to cart</a>
               </button>
             </div>
           </div>
-
 
         </div>
         <div class="text-center">
