--- a/UI/users/all-food-items.html
+++ b/UI/users/all-food-items.html
@@ -25,6 +25,7 @@
           <a href="order-history.html">Order history</a>
         </div>
       </div>
+
       <div class="dropdown profile">
         <button class="dropbtn">Howdy, Lebagerian
           <i class="fa fa-caret-down"></i>
@@ -32,6 +33,20 @@
         <div class="dropdown-content">
           <a href="my-account.html">My Account</a>
           <a href="../login.html">Logout</a>
+        </div>
+      </div>
+      <div class="dropdown profile">
+        <button class="dropbtn">Cart items (0)
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <div class="cart-body">
+            Your cart is empty
+            <br>
+            <button class="blue-bg-colour white-text cart-btn">
+              <a href="confirm-order.html" class="white-text">Proceed to checkout</a>
+            </button>
+          </div>
         </div>
       </div>
       <a id="nav-icon" class="icon">&#9776;</a>
@@ -52,14 +67,14 @@
           <div class="item">
             <div class="item-container">
               <div class="img-container">
-                <img class="img-fluid" src="../assets/images/pastery-1.jpg"/>
+                <img class="img-fluid" src="../assets/images/pastery-1.jpg" />
               </div>
               <div class="item-details">
                 <h3>Traditional French dessert</h3>
                 <p><span class="price-figure">&#8358;1,500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
-                <a href="confirm-order.html" class="white-text">Order now</a>
+                <a href="confirm-order.html" class="white-text">Add to cart</a>
               </button>
             </div>
           </div>
@@ -67,14 +82,14 @@
           <div class="item">
             <div class="item-container">
               <div class="img-container">
-                <img class="img-fluid" src="../assets/images/pastery-2.jpg"/>
+                <img class="img-fluid" src="../assets/images/pastery-2.jpg" />
               </div>
               <div class="item-details">
                 <h3>Sweet italian pastery</h3>
                 <p><span class="price-figure">&#8358;1,500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
-                <a href="confirm-order.html" class="white-text">Order now</a>
+                <a href="confirm-order.html" class="white-text">Add to cart</a>
               </button>
             </div>
           </div>
@@ -82,14 +97,14 @@
           <div class="item">
             <div class="item-container">
               <div class="img-container">
-                <img class="img-fluid" src="../assets/images/pastery-3.jpg"/>
+                <img class="img-fluid" src="../assets/images/pastery-3.jpg" />
               </div>
               <div class="item-details">
                 <h3>Decadent Sugary Fruit Puff</h3>
                 <p><span class="price-figure">&#8358;1,500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
-                <a href="confirm-order.html" class="white-text">Order now</a>
+                <a href="confirm-order.html" class="white-text">Add to cart</a>
               </button>
             </div>
           </div>
@@ -97,14 +112,14 @@
           <div class="item">
             <div class="item-container">
               <div class="img-container">
-                <img class="img-fluid" src="../assets/images/pastery-4.jpg"/>
+                <img class="img-fluid" src="../assets/images/pastery-4.jpg" />
               </div>
               <div class="item-details">
                 <h3>Freshly Baked Sausages</h3>
                 <p><span class="price-figure">&#8358;1,500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
-                <a href="confirm-order.html" class="white-text">Order now</a>
+                <a href="confirm-order.html" class="white-text">Add to cart</a>
               </button>
             </div>
           </div>
@@ -116,14 +131,14 @@
           <div class="item">
             <div class="item-container">
               <div class="img-container">
-                <img class="img-fluid" src="../assets/images/drink-1.jpg"/>
+                <img class="img-fluid" src="../assets/images/drink-1.jpg" />
               </div>
               <div class="item-details">
                 <h3>Coffee</h3>
                 <p><span class="price-figure">&#8358;1,500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
-                <a href="confirm-order.html" class="white-text">Order now</a>
+                <a href="confirm-order.html" class="white-text">Add to cart</a>
               </button>
             </div>
           </div>
@@ -131,14 +146,14 @@
           <div class="item">
             <div class="item-container">
               <div class="img-container">
-                <img class="img-fluid" src="../assets/images/drink-2.jpg"/>
+                <img class="img-fluid" src="../assets/images/drink-2.jpg" />
               </div>
               <div class="item-details">
                 <h3>Latte</h3>
                 <p><span class="price-figure">&#8358;1,500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
-                <a href="confirm-order.html" class="white-text">Order now</a>
+                <a href="confirm-order.html" class="white-text">Add to cart</a>
               </button>
 
             </div>
@@ -147,14 +162,14 @@
           <div class="item">
             <div class="item-container">
               <div class="img-container">
-                <img class="img-fluid" src="../assets/images/drink-3.jpg"/>
+                <img class="img-fluid" src="../assets/images/drink-3.jpg" />
               </div>
               <div class="item-details">
                 <h3>Clean Clear Water</h3>
                 <p><span class="price-figure">&#8358;1,500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
-                <a href="confirm-order.html" class="white-text">Order now</a>
+                <a href="confirm-order.html" class="white-text">Add to cart</a>
               </button>
 
             </div>
@@ -162,14 +177,14 @@
           <div class="item">
             <div class="item-container">
               <div class="img-container">
-                <img class="img-fluid" src="../assets/images/drink-4.jpg"/>
+                <img class="img-fluid" src="../assets/images/drink-4.jpg" />
               </div>
               <div class="item-details">
                 <h3>Cuba Libre cocktail</h3>
                 <p><span class="price-figure">&#8358;1,500</span></p>
               </div>
               <button class="blue-bg-colour">
-                <a href="confirm-order.html" class="white-text">Order now</a>
+                <a href="confirm-order.html" class="white-text">Add to cart</a>
               </button>
 
             </div>
@@ -178,7 +193,7 @@
         <!--Flex container for food item display ends here-->
 
         <div class="text-center">
-          <button class="">
+          <button class="blue-bg-colour white-text">
             <a>Show More</a>
           </button>
         </div>
