--- a/UI/users/pending-orders.html
+++ b/UI/users/pending-orders.html
@@ -19,7 +19,7 @@
       <div class="text-center">
         <h1 class="red-text">Cancel your Order</h1>
         <div class="">
-          <img src="../assets/images/delete.png" alt="Cancel"/>
+          <img src="../assets/images/delete.png" alt="Cancel" />
         </div>
         <div class="">
           <h1>Are you sure ?</h1>
@@ -57,6 +57,20 @@
           <a href="../login.html">Logout</a>
         </div>
       </div>
+      <div class="dropdown profile">
+        <button class="dropbtn">Cart items (0)
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <div class="cart-body">
+            Your cart is empty
+            <br>
+            <button class="blue-bg-colour white-text cart-btn">
+              <a href="confirm-order.html" class="white-text">Proceed to checkout</a>
+            </button>
+          </div>
+        </div>
+      </div>
       <a id="nav-icon" class="icon">&#9776;</a>
     </nav>
     <!-- Navigation bar Ends -->
@@ -72,22 +86,15 @@
           <div class="item">
             <div class="item-container">
               <div class="img-container">
-                <img class="img-fluid" src="../assets/images/pastery-1.jpg"/>
+                <img class="img-fluid" src="../assets/images/pastery-1.jpg" />
               </div>
               <div class="item-details">
-                <p>23-08-2018 12:09:34PM</p>
-                <h3>Traditional French dessert</h3>
-                <p>
-                  <span class="price-figure">&#8358;1500</span>
-                </p>
-                <b>Quantity: </b> 5
-                </p>
-                <p>
-                  <b>Amount Paid: </b><span class="price-figure">&#8358;7500</span>
-                </p>
+                <p>12-08-2018 12:09:00</p>
+                <p>Items: 4 <a href="#">View Items</a></p>
+                <p>Amount Paid: <span class="price-figure">&#8358;6000</span></p>
               </div>
               <button class="green-bg white-text">
-                <a href="edit-order.html" class="white-text">Edit</a>
+                <a href="#" class="white-text">Edit</a>
               </button>
               <button class="red-bg-colour white-text">
                 <a onclick="modalPopup()" class="white-text">Cancel</a>
@@ -98,20 +105,13 @@
           <div class="item">
             <div class="item-container">
               <div class="img-container">
-                <img class="img-fluid" src="../assets/images/pastery-2.jpg"/>
+                <img class="img-fluid" src="../assets/images/pastery-2.jpg" />
               </div>
               <div class="item-details">
-                <p>23-08-2018 12:09:34PM</p>
-                <h3>Sweet italian pastery</h3>
-                <p>
-                  <span class="price-figure">&#8358;1500</span>
-                </p>
-                <b>Quantity: </b> 5
-                </p>
-                <p>
-                  <b>Amount Paid: </b><span class="price-figure">&#8358;7500</span>
-                </p>
-              </div>
+                  <p>22-04-2018 12:09:00</p>
+                  <p>Items: 6 <a href="#">View Items</a></p>
+                  <p>Amount Paid: <span class="price-figure">&#8358;4000</span></p>
+                </div>
               <button class="green-bg white-text">
                 <a href="edit-order.html" class="white-text">Edit</a>
               </button>
@@ -125,20 +125,13 @@
           <div class="item">
             <div class="item-container">
               <div class="img-container">
-                <img class="img-fluid" src="../assets/images/pastery-3.jpg"/>
+                <img class="img-fluid" src="../assets/images/pastery-3.jpg" />
               </div>
               <div class="item-details">
-                <p>23-08-2018 12:09:34PM</p>
-                <h3>Decadent Sugary Fruit Puff</h3>
-                <p>
-                  <span class="price-figure">&#8358;1500</span>
-                </p>
-                <b>Quantity: </b> 5
-                </p>
-                <p>
-                  <b>Amount Paid: </b><span class="price-figure">&#8358;7500</span>
-                </p>
-              </div>
+                  <p>12-08-2018 12:09:00</p>
+                  <p>Items: 2 <a href="#">View Items</a></p>
+                  <p>Amount Paid: <span class="price-figure">&#8358;2000</span></p>
+                </div>
               <button class="green-bg white-text">
                 <a href="edit-order.html" class="white-text">Edit</a>
               </button>
@@ -150,20 +143,13 @@
           <div class="item">
             <div class="item-container">
               <div class="img-container">
-                <img class="img-fluid" src="../assets/images/pastery-4.jpg"/>
+                <img class="img-fluid" src="../assets/images/pastery-4.jpg" />
               </div>
               <div class="item-details">
-                <p>23-08-2018 12:09:34PM</p>
-                <h3>Freshly Baked Sausages</h3>
-                <p>
-                  <span class="price-figure">&#8358;1500</span>
-                </p>
-                <b>Quantity: </b> 5
-                </p>
-                <p>
-                  <b>Amount Paid: </b><span class="price-figure">&#8358;7500</span>
-                </p>
-              </div>
+                  <p>12-08-2018 12:09:00</p>
+                  <p>Items: 10 <a href="#">View Items</a></p>
+                  <p>Amount Paid: <span class="price-figure">&#8358;10000</span></p>
+                </div>
               <button class="green-bg white-text">
                 <a href="edit-order.html" class="white-text">Edit</a>
               </button>
