--- a/UI/index.html
+++ b/UI/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./assets/css/style.css" type="text/css" />
+  <link rel="stylesheet" href="./assets/css/cart.css" type="text/css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Home ¦ Fast-Food-Fast</title>
 </head>
@@ -17,6 +18,20 @@
       <a href="index.html" class="nav-brand">Fast-Food-Fast</a>
       <a href="all-food-items.html">View Menu</a>
       <a href="login.html" class="profile">Sign in</a>
+      <div class="dropdown profile">
+        <button class="dropbtn">Cart items (0)
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <div class="cart-body">
+            Your cart is empty
+            <br>
+            <button class="blue-bg-colour white-text cart-btn">
+              <a href="login.html" class="white-text">Proceed to checkout</a>
+            </button>
+          </div>
+        </div>
+      </div>
       <a id="nav-icon" class="icon">&#9776;</a>
     </nav>
     <!-- Navigation bar Ends -->
@@ -30,7 +45,8 @@
           <h1>Welcome to Fast-Food-Fast</h1>
           <p>Your number one food ordering platform.</p>
           <p>FFF is an application where customers can place order for meals daily and get it delivered to them in a 'Split
-            Second'</p>
+            Second'
+          </p>
         </div>
         <div class="top-hero-btn">
           <button class="blue-bg-colour ">
@@ -51,14 +67,14 @@
           <div class="item">
             <div class="item-container">
               <div class="img-container">
-                <img class="img-fluid" src="./assets/images/item-1.jpg"/>
+                <img class="img-fluid" src="./assets/images/item-1.jpg" />
               </div>
               <div class="item-details">
                 <h3>Vegan burger buckwheat</h3>
                 <p><span class="price-figure">&#8358;1,500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
-                <a href="login.html" class="white-text">Order now</a>
+                <a href="login.html" class="white-text">Add to Cart</a>
               </button>
             </div>
           </div>
@@ -66,14 +82,14 @@
           <div class="item">
             <div class="item-container">
               <div class="img-container">
-                <img class="img-fluid" src="./assets/images/item-2.jpg"/>
+                <img class="img-fluid" src="./assets/images/item-2.jpg" />
               </div>
               <div class="item-details">
                 <h3>Chicken Shawarma</h3>
                 <p><span class="price-figure">&#8358;1,500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
-                <a href="login.html" class="white-text">Order now</a>
+                <a href="login.html" class="white-text">Add to Cart</a>
               </button>
 
             </div>
@@ -82,14 +98,14 @@
           <div class="item">
             <div class="item-container">
               <div class="img-container">
-                <img class="img-fluid" src="./assets/images/item-3.jpg"/>
+                <img class="img-fluid" src="./assets/images/item-3.jpg" />
               </div>
               <div class="item-details">
                 <h3>Ham Sandwiches</h3>
                 <p><span class="price-figure">&#8358;1,500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
-                <a href="login.html" class="white-text">Order now</a>
+                <a href="login.html" class="white-text">Add to Cart</a>
               </button>
 
             </div>
@@ -97,14 +113,14 @@
           <div class="item">
             <div class="item-container">
               <div class="img-container">
-                <img class="img-fluid" src="./assets/images/item-4.jpg"/>
+                <img class="img-fluid" src="./assets/images/item-4.jpg" />
               </div>
               <div class="item-details">
                 <h3>Ata-Rodo Pizza</h3>
                 <p><span class="price-figure">&#8358;1,500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
-                <a href="login.html" class="white-text">Order now</a>
+                <a href="login.html" class="white-text">Add to Cart</a>
               </button>
 
             </div>
@@ -120,7 +136,7 @@
     </div>
   </main>
   <!-- Main content Ends -->
-  
+
   <footer>
     <div class="">
       <div class="text-center white-text">
