--- a/UI/users/cancel-order-successful.html
+++ b/UI/users/cancel-order-successful.html
@@ -1,4 +1,3 @@
-<!--User pages Skeleton-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -34,6 +33,20 @@
         <div class="dropdown-content">
           <a href="my-account.html">My Account</a>
           <a href="../login.html">Logout</a>
+        </div>
+      </div>
+      <div class="dropdown profile">
+        <button class="dropbtn">Cart items (0)
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <div class="cart-body">
+            Your cart is empty
+            <br>
+            <button class="blue-bg-colour white-text cart-btn">
+              <a href="confirm-order.html" class="white-text">Proceed to checkout</a>
+            </button>
+          </div>
         </div>
       </div>
       <a id="nav-icon" class="icon">&#9776;</a>
