--- a/UI/users/edit-order-successful.html
+++ b/UI/users/edit-order-successful.html
@@ -1,4 +1,3 @@
-<!--User pages Skeleton-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -36,6 +35,20 @@
           <a href="../login.html">Logout</a>
         </div>
       </div>
+      <div class="dropdown profile">
+        <button class="dropbtn">Cart items (0)
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <div class="cart-body">
+            Your cart is empty
+            <br>
+            <button class="blue-bg-colour white-text cart-btn">
+              <a href="confirm-order.html" class="white-text">Proceed to checkout</a>
+            </button>
+          </div>
+        </div>
+      </div>
       <a id="nav-icon" class="icon">&#9776;</a>
     </nav>
     <!-- Navigation bar Ends -->
@@ -48,7 +61,7 @@
         <div class="innerbox-container text-center">
           <h1>Order Modified Successfully</h1>
           <p>Your order has been Modified and will be delivered to you in a 'Split Second'</p>
-          <img src="../assets/images/thumbs.png"/>
+          <img src="../assets/images/thumbs.png" />
           <br>
           <a href="all-food-items.html" class="">
             << Back to Menu items</a>
